apply plugin: 'com.android.application'

android {
//flavorDimensions("common","ffmpeg")
    compileSdkVersion 27
    buildToolsVersion "27.0.3"
	useLibrary 'org.apache.http.legacy'
	lintOptions{ abortOnError false }
	signingConfigs {
		release {
			storeFile file("../CHH2000day.keystore")
			storePassword STORE_PWD
			keyAlias KEY_ALIAS
			keyPassword KEY_PWD
		}
	}
    defaultConfig {
        applicationId "com.CHH2000day.navalcreed.modhelper"
        minSdkVersion 19
        targetSdkVersion 25
        versionCode 73
        versionName "Alpha-build2018072600"
        flavorDimensions "versionCode"
		
    }
    	productFlavors {
		common {
		dimension "versionCode"
			versionNameSuffix "-common"
		}
		ffmpeg {
		dimension "versionCode"
			versionNameSuffix "-ffmpeg"
		}
	}


    buildTypes {
        release {
			signingConfig signingConfigs.release
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
		}
		debug {
			signingConfig signingConfigs.release
		}
    }
	compileOptions {
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
}
}

dependencies {
	compile 'com.android.support:design:25.4.0'
	compile 'cn.bmob.android:bmob-sdk:3.6.4'
	compile 'com.android.support:appcompat-v7:25.4.0'
	compile 'com.android.support:recyclerview-v7:25.4.0'
	compile 'com.android.support:cardview-v7:25.4.0'
	ffmpegCompile "com.writingminds:FFmpegAndroid:0.3.2"

	//compile 'com.squareup.okio:okio:1.14.1'
	//Remove is as it's denpended by bmob libs
	compile fileTree(dir: 'libs', include: ['*.jar'])
}
